--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,12 @@ packages:
 #
 extra-deps:
 - HDBC-sqlite3-2.3.3.1
-- generic-persistence-0.3.0.1
+#- generic-persistence-0.3.1.0
+- git: https://github.com/thma/generic-persistence.git
+  commit: 5c7805a5a71d7d75ced7a674cc0ca987cf258530
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
+
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
