on the way to cleaning up

--- a/servant-gp.cabal
+++ b/servant-gp.cabal
@@ -25,11 +25,14 @@ source-repository head
 
 library
   exposed-modules:
+      ConnectionPool
       Description
       Models
+      ServerUtils
       SwaggerEntityService
       UserApi
       UserServer
+      UserServerSafe
   other-modules:
       Paths_servant_gp
   hs-source-dirs:
